More changes to add actions to array.
Add loader. css changes

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GANA Frailty Questionaire</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
     <div class="container">
@@ -16,8 +16,8 @@
         Receiving treatment <br/>
         In an acute <br/>
         Setting</h3>
-        <a class="btn" href="/question.html">Start Questionaire</a>
-        <a class="btn" href="/about.html">About the Toolkit</a>
+        <a class="btn" href="./question.html">Start Questionaire</a>
+        <a class="btn" href="./about.html">About the Toolkit</a>
     </div>
     </div>
     
