--- a/www/plan.html
+++ b/www/plan.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalised Action Plan</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/plan.css">
+
 </head>
 <body>
     <div class="container">
-        <div id="end" class="flex-center flex-column">
+        <div id="plan" class="flex-center flex-column">
         <h1>Action Plan</h1>
-        <h3>No actions for you! Naughty!</h3>
-        <a class="btn" href="/question.html">Restart Questionaire</a>
-        <a class="btn" href="/">Go Home</a>
-        <a class="btn" href="/about.html">About the Toolkit</a>
+        <ul id="finalActions"></ul>
+        <a class="btn" href="./question.html">Restart Questionaire</a>
+        <a class="btn" href="./">Go Home</a>
+        <a class="btn" href="./about.html">About the Toolkit</a>
     </div>
     </div>
     
 </body>
-<script src="js/plan.js"></script>
+<script src="./js/plan.js"></script>
 </html>
