--- a/www/question.html
+++ b/www/question.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questions</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/question.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/question.css">
 </head>
 <body>
     <div class="container">
-        <div id="questionaire" class="justify-center flex-column">
+        <div id="loader"></div>
+        <div id="questionaire" class="justify-center flex-column hidden">
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
@@ -26,7 +27,7 @@
                     </p>
                 </div>
             </div>
-        <h2 id="question">Does the person have a Rockwood frailty score of 5 or above?</h2>
+        <h3 id="question"></h3>
         <div class="choice-container">
             <p class="choice-prefix">A</p>
             <p class="choice-text" data-number="1">Yes</p>
@@ -38,6 +39,6 @@
         </div>
     </div>
     </div>
-    <script src="js/question.js"></script>
+    <script src="./js/question.js"></script>
 </body>
 </html>
