More stuff done

--- a/www/plan.html
+++ b/www/plan.html
@@ -12,7 +12,8 @@
     <div class="container">
         <div id="plan" class="flex-center flex-column">
         <h1>Action Plan</h1>
-        <ul id="finalActions"></ul>
+        <a class="collapsible">Toggle Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
         <a class="btn" href="./question.html">Restart Questionaire</a>
         <a class="btn" href="./">Go Home</a>
         <a class="btn" href="./about.html">About the Toolkit</a>
