--- a/www/question.html
+++ b/www/question.html
@@ -14,7 +14,7 @@
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
-                        Category
+                        Question
                     </p>
                     <div id="progressBar">
                         <div id="progressBarFull"></div>
