css changes mainly

--- a/www/plan.html
+++ b/www/plan.html
@@ -12,7 +12,31 @@
     <div class="container">
         <div id="plan" class="flex-center flex-column">
         <h1>Action Plan</h1>
-        <a class="collapsible">Toggle Actions</a>
+        <a class="collapsible">Toggle Mental Capacity Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Delerium Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Memory Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Continence Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Mobility Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Instability Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Self Care Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Support Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Medication Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Physical Welbeing Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Psychological Welbeing Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Communications and Sensory Systems Actions</a>
+        <ul class="finalActions" id="finalActions"></ul>
+        <a class="collapsible">Toggle Other Actions</a>
         <ul class="finalActions" id="finalActions"></ul>
         <a class="btn" href="./question.html">Restart Questionaire</a>
         <a class="btn" href="./">Go Home</a>
